Upgrade to Prisma 6.19.2 for adapter compatibility

--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   },
   "dependencies": {
     "@libsql/client": "^0.17.0",
-    "@prisma/adapter-libsql": "^7.4.1",
-    "@prisma/client": "^5.22.0",
+    "@prisma/adapter-libsql": "^6.19.2",
+    "@prisma/client": "^6.19.2",
+    "better-sqlite3": "^12.6.2",
     "next": "16.1.6",
-    "prisma": "^5.22.0",
+    "prisma": "^6.19.2",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "recharts": "^3.7.0",
